# podcast-chatbot

./: README.md  app.py  pyproject.toml  test.py
agents/: clients.py  entry.py  memory_db.py  podcast_agent.py  rag_agents.py  rag_db.py  rag_functions.py
data/: benshapiro.txt  elonmusk.txt  samaltman.txt  yannlecun.txt
logdir/: ell.db
notebooks/: data_injest.ipynb  data_prepare.ipynb  langgraph_crag.ipynb  test.ipynb  vector_query.ipynb
